# ultttt

./: README.md  pyproject.toml  scripts.py
.github/workflows/: pyinstaller.yml  release.yml
src/ultttt/: _tic_tac_toe.py  _ultimate_tic_tac_toe.py
