[project]
name = "ultttt"
version = "0.1.0"
classifiers = ["Private :: Do not Upload"]
requires-python = ">=3.12"
dependencies = ["pygame>=2.6.1"]

[project.gui-scripts]
ultttt = "ultttt.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pillow>=11.0.0",
    "poethepoet>=0.30.0",
    "pyinstaller>=6.11.1",
    "pyright>=1.1.389",
    "ruff>=0.8.0",
]

[tool.poe.tasks]
format = "ruff format"
lint = "ruff check --fix"
build-exe = "pyinstaller -y --name=ultttt --collect-all=ultttt --icon=src/ultttt/icon.png --windowed src/ultttt/_pyinstaller_ultttt.pyw"
